Modify Layout, css , add images to root, add category model

--- a/Taste.csproj
+++ b/Taste.csproj
@@ -21,4 +21,11 @@
     <ProjectReference Include="..\Taste.DataAccess\Taste.DataAccess.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Pages\Admin\" />
+    <Folder Include="Pages\Customer\Home\" />
+    <Folder Include="Pages\Customer\Cart\" />
+  </ItemGroup>
+
 </Project>
