Modify category js

--- a/Taste/Taste.csproj
+++ b/Taste/Taste.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Folder Include="Pages\Admin\FoodType\" />
     <Folder Include="Pages\Admin\MenuItem\" />
+    <Folder Include="Pages\Admin\User\" />
     <Folder Include="Pages\Customer\Home\" />
     <Folder Include="Pages\Customer\Cart\" />
   </ItemGroup>
