Script added to upsert  menu item and modify  image directory

--- a/Taste/Taste.csproj
+++ b/Taste/Taste.csproj
@@ -32,6 +32,7 @@
     <Folder Include="Pages\Admin\User\" />
     <Folder Include="Pages\Customer\Home\" />
     <Folder Include="Pages\Customer\Cart\" />
+    <Folder Include="wwwroot\images\menuItems\" />
   </ItemGroup>
 
 </Project>
