--- a/Taste.DataAccess/Taste.DataAccess.csproj
+++ b/Taste.DataAccess/Taste.DataAccess.csproj
@@ -9,6 +9,8 @@
     <Compile Remove="Migrations\20200830114333_addApplictationUserModel.Designer.cs" />
     <Compile Remove="Migrations\20200831100640_addedShoppinCartModel.cs" />
     <Compile Remove="Migrations\20200831100640_addedShoppinCartModel.Designer.cs" />
+    <Compile Remove="Migrations\20200915033614_kasidaminabago.cs" />
+    <Compile Remove="Migrations\20200915033614_kasidaminabago.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
